--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <div id="container"></div>
         <script src="js/three.min.js"></script>
     	<script src="js/OrbitControls.js"></script>
-    	<script src="js/script.js"></script>
+    	<script src="js/compiled.js"></script>
     </body>
 </html>
