--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <link href="./css/styles.css" rel="stylesheet">
+        <base target="_top">
     </head>
     <body>
         <div id="container"></div>
